[bugfix] #6 save modal z-index 에러 해결

--- a/src/css/save-modal.css
+++ b/src/css/save-modal.css
@@ -1,5 +1,5 @@
 /* thisplay-save-modal css */
 
 .thisplay-save-modal {
-
+  z-index: 9999;
 }
